# dd_afpocket

./: .gitignore  Example_CDK20.en.md  Example_CDK20.jp.md  README.en.md  README.jp.md  README.md  pyproject.toml
dd_af/: cli.py  cluster.py  pipeline.py  pocket.py  restraints.py  sample.py  visualize.py
dd_afpocket/: cli.py  cluster.py  parallel.py  pipeline.py  pocket.py  prep.py  progress.py  restraints.py  sample.py  visualize.py
examples/cdk20/: cluster_report.csv  pocket_box.json  pocket_candidates.html  pocket_report.json  pocket_view.html  restraint_report.json
tests/: _helpers.py  test_cli_preset.py  test_cluster.py  test_pocket.py  test_prep.py  test_restraints.py  test_visualize.py
