[project]
name = "dd_afpocket"
version = "0.1.0"
description = "Detect a druggable pocket in an AlphaFold DB model, sample its local flexibility with restrained MD, and cluster the trajectory into representative receptor conformations for ensemble docking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rdkit", "numpy", "pandas", "dd_prep",
    "openmm", "mdtraj", "matplotlib", "scipy", "scikit-learn", "py3Dmol",
]

[project.scripts]
dd_afpocket-fetch = "dd_afpocket.cli:main_fetch"
dd_afpocket-pocket = "dd_afpocket.cli:main_pocket"
dd_afpocket-sample = "dd_afpocket.cli:main_sample"
dd_afpocket-cluster = "dd_afpocket.cli:main_cluster"
dd_afpocket-run = "dd_afpocket.cli:main_run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dd_afpocket"]
